# reactive-robot

./: .gitignore  README.md  pyproject.toml  reactive-robot.yml  requirements.txt  rx-robot.yml
.docker/mqtt/: Dockerfile  mosquitto.conf
.github/workflows/: python-publish.yml  python-tests.yml
assets/: robocon-22-cfp.md
example/: Dockerfile  reactive-robot-yml
examples/kafka/: docker-compose.yml  publish.py  reactive-robot.yml  requirements.txt
examples/mqtt/: Dockerfile  docker-compose.yml  reactive-robot-yml  reactive-robot.yml
examples/rabbitmq/: Dockerfile  docker-compose.yml  reactive-robot-yml  reactive-robot.yml  requirements.txt
examples/rabbitmq/tasks/: basic.robot
reactive_robot/: __init__.py  __main__.py  bindings.py  cli.py  constants.py  exceptions.py  lib.py  log.py  models.py  serve.py
reactive_robot/config/: base.py  schema.py
reactive_robot/connectors/: base.py  kafka.py  mqtt.py  rabbitmq.py
reactive_robot/exceptions/: __init__.py
reactive_robot/parsers/: base.py  string.py
rx_robot/: __init__.py  __main__.py  cli.py  log.py  serve.py
rx_robot/config/: base.py  schema.py
rx_robot/connectors/: rabbitmq.py
rx_robot/parsers/: base.py  string.py
tests/: test_mqtt.py  test_package.py
tests/robots/: basic.robot  hello-world.robot  http.robot  lib.robot
