[tool.poetry]
name = "reactive-robot"
version = "0.1.0-alpha.5"
description = "Fastest way to turn your robot workflows into event driven service."
authors = ["Yusuf Can Bayrak <yusufcanbayrak@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/yusufcanb/reactive-robot"
readme = 'README.md'
packages = [
    { include = "reactive_robot" },
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.3"
colorlog = "^6.6.0"
importlib-metadata = "^4.8.2"
marshmallow = "^3.14.1"
minio = "^7.1.1"
pika = "^1.2.0"
paho-mqtt = "^1.6.1"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
coverage = "^5.4"
pytest = "^6.2.2"
pytest-coverage = "^0.0"
tox = "^3.22.0"
black = "^20.8b1"
twine = "^3.3.0"
mkdocs = "^1.2.3"

[tool.poetry.scripts]
reactive-robot = 'reactive_robot.cli:cli'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
